# trappingway

./: .gitignore  Cargo.toml  README.md  scrape_example.html  sqltest.sql
migrations/: 20220609025818_initialize.sql  20220625214452_add_antistatic_option.sql  20220829041020_newstype-regexfilter.sql
src/: main.rs  scraper_util.rs  xiv_util.rs
