[package]
name = "ffxiv_pf_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "builder"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poise = "0.2.1"
futures = "0.3.13"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
scraper = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.10.2"
stopwatch = "0.0.7"
cssparser = "0.29.6"
simple-error = "0.2.3"
regex = "1"
lazy_static = "1.4.0"

[profile.release]
debug = true